--- a/index.html
+++ b/index.html
@@ -8,42 +8,45 @@
   </head>
   <body>
     <div id="book">
-			<div class="page" id="page1">
+      <div class="page" id="page1">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAPA.png" alt="" srcset="">
+          <img src="/src/images/NATAL RA Ebook/CAPA.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page2">
+      <div class="page" id="page2">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CONTRA CAPA.png" alt="" srcset="">
+          <img
+            src="/src/images/NATAL RA Ebook/CONTRA CAPA.png"
+            alt=""
+            srcset="" />
         </div>
       </div>
-			<!-- <div class="page" id="page3">
+      <!-- <div class="page" id="page3">
         <div class="content">
           <img src="/src/images/NATAL RA Ebook/INDICE.png" alt="" srcset="">
         </div>
       </div> -->
-			<div class="page" id="page4">
+      <div class="page" id="page4">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/INTRO.png" alt="" srcset="">
+          <img src="/src/images/NATAL RA Ebook/INTRO.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page5">
+      <div class="page" id="page5">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 1.png" alt="" srcset="">
+          <img src="/src/images/NATAL RA Ebook/CAP 1.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page6">
+      <div class="page" id="page6">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 1.1.png" alt="" srcset="">
+          <img src="/src/images/NATAL RA Ebook/CAP 1.1.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page7">
+      <div class="page" id="page7">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 1.2.png" alt="" srcset="">
+          <img src="/src/images/NATAL RA Ebook/CAP 1.2.png" alt="" srcset="" />
         </div>
       </div>
-			<!-- <div class="page" id="page8">
+      <!-- <div class="page" id="page8">
         <div class="content">
           <img src="/src/images/NATAL RA Ebook/CAP 2.png" alt="" srcset="">
         </div>
@@ -88,17 +91,17 @@
           <img src="/src/images/NATAL RA Ebook/CAP 4.2.png" alt="" srcset="">
         </div>
       </div> -->
-			<div class="page" id="page17">
+      <div class="page" id="page17">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/EM BREVE.png" alt="" srcset="">
+          <img src="/src/images/NATAL RA Ebook/EM BREVE.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page18">
+      <div class="page" id="page18">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CONTATO.png" alt="" srcset="">
+          <img src="/src/images/NATAL RA Ebook/CONTATO.png" alt="" srcset="" />
         </div>
       </div>
-			<!-- <div class="page" id="page19">
+      <!-- <div class="page" id="page19">
         <div class="content">
           <img src="/src/images/NATAL RA Ebook/CAPA BW.png" alt="" srcset="">
         </div>
