--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>O Natal que Muita Gente ESqueceu - Vitor Calixto</title>
-    <link rel="stylesheet" href="/src/css/styles.css" />
+    <link rel="stylesheet" href="src/css/styles.css" />
   </head>
   <body>
     <div id="book">
@@ -115,6 +115,6 @@
       <button id="next">Next</button>
     </div>
 
-    <script src="/src/js/script.js"></script>
+    <script src="src/js/script.js"></script>
   </body>
 </html>
