--- a/index.html
+++ b/index.html
@@ -11,100 +11,100 @@
     <div id="book">
       <div class="page" id="page1">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAPA.png" alt="" srcset="" />
+          <img src="src/images/NATAL RA Ebook/CAPA.png" alt="" srcset="" />
         </div>
       </div>
       <div class="page" id="page2">
         <div class="content">
           <img
-            src="/src/images/NATAL RA Ebook/CONTRA CAPA.png"
+            src="src/images/NATAL RA Ebook/CONTRA CAPA.png"
             alt=""
             srcset="" />
         </div>
       </div>
       <!-- <div class="page" id="page3">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/INDICE.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/INDICE.png" alt="" srcset="">
         </div>
       </div> -->
       <div class="page" id="page4">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/INTRO.png" alt="" srcset="" />
+          <img src="src/images/NATAL RA Ebook/INTRO.png" alt="" srcset="" />
         </div>
       </div>
       <div class="page" id="page5">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 1.png" alt="" srcset="" />
+          <img src="src/images/NATAL RA Ebook/CAP 1.png" alt="" srcset="" />
         </div>
       </div>
       <div class="page" id="page6">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 1.1.png" alt="" srcset="" />
+          <img src="src/images/NATAL RA Ebook/CAP 1.1.png" alt="" srcset="" />
         </div>
       </div>
       <div class="page" id="page7">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 1.2.png" alt="" srcset="" />
+          <img src="src/images/NATAL RA Ebook/CAP 1.2.png" alt="" srcset="" />
         </div>
       </div>
       <!-- <div class="page" id="page8">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 2.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 2.png" alt="" srcset="">
         </div>
       </div>
 			<div class="page" id="page9">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 2.1.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 2.1.png" alt="" srcset="">
         </div>
       </div>
 			<div class="page" id="page10">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 2.2.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 2.2.png" alt="" srcset="">
         </div>
       </div>
 			<div class="page" id="page11">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 3.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 3.png" alt="" srcset="">
         </div>
       </div>
 			<div class="page" id="page12">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 3.1.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 3.1.png" alt="" srcset="">
         </div>
       </div>
 			<div class="page" id="page13">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 3.2.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 3.2.png" alt="" srcset="">
         </div>
       </div>
 			<div class="page" id="page14">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 4.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 4.png" alt="" srcset="">
         </div>
       </div>
 			<div class="page" id="page15">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 4.1.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 4.1.png" alt="" srcset="">
         </div>
       </div>
 			<div class="page" id="page16">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAP 4.2.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 4.2.png" alt="" srcset="">
         </div>
       </div> -->
       <div class="page" id="page17">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/EM BREVE.png" alt="" srcset="" />
+          <img src="src/images/NATAL RA Ebook/EM BREVE.png" alt="" srcset="" />
         </div>
       </div>
       <div class="page" id="page18">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CONTATO.png" alt="" srcset="" />
+          <img src="src/images/NATAL RA Ebook/CONTATO.png" alt="" srcset="" />
         </div>
       </div>
       <!-- <div class="page" id="page19">
         <div class="content">
-          <img src="/src/images/NATAL RA Ebook/CAPA BW.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAPA BW.png" alt="" srcset="">
         </div>
       </div> -->
     </div>
