--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             srcset="" />
         </div>
       </div>
-      <!-- <div class="page" id="page3">
+      <div class="page" id="page3">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/INDICE.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/INDICE.png" alt="" srcset="" />
         </div>
-      </div> -->
+      </div>
       <div class="page" id="page4">
         <div class="content">
           <img src="src/images/NATAL RA Ebook/INTRO.png" alt="" srcset="" />
@@ -49,64 +49,64 @@
       </div>
       <div class="page" id="page8">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/CAP 2.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 2.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page9">
+      <div class="page" id="page9">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/CAP 2.1.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 2.1.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page10">
+      <div class="page" id="page10">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/CAP 2.2.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 2.2.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page11">
+      <div class="page" id="page11">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/CAP 3.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 3.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page12">
+      <div class="page" id="page12">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/CAP 3.1.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 3.1.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page13">
+      <div class="page" id="page13">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/CAP 3.2.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 3.2.png" alt="" srcset="" />
         </div>
       </div>
-			<!-- <div class="page" id="page14">
+      <div class="page" id="page14">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/CAP 4.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 4.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page15">
+      <div class="page" id="page15">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/CAP 4.1.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 4.1.png" alt="" srcset="" />
         </div>
       </div>
-			<div class="page" id="page16">
+      <div class="page" id="page16">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/CAP 4.2.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAP 4.2.png" alt="" srcset="" />
         </div>
-      </div> -->
-      <div class="page" id="page17">
+      </div>
+      <!-- <div class="page" id="page17">
         <div class="content">
           <img src="src/images/NATAL RA Ebook/EM BREVE.png" alt="" srcset="" />
         </div>
-      </div>
+      </div> -->
       <div class="page" id="page18">
         <div class="content">
           <img src="src/images/NATAL RA Ebook/CONTATO.png" alt="" srcset="" />
         </div>
       </div>
-      <!-- <div class="page" id="page19">
+      <div class="page" id="page19">
         <div class="content">
-          <img src="src/images/NATAL RA Ebook/CAPA BW.png" alt="" srcset="">
+          <img src="src/images/NATAL RA Ebook/CAPA BW.png" alt="" srcset="" />
         </div>
-      </div> -->
+      </div>
     </div>
 
     <!-- Botões de Navegação -->
